--- a/src/app/pages/campaigns/campaigns.component.html
+++ b/src/app/pages/campaigns/campaigns.component.html
@@ -31,8 +31,8 @@
       </div>
       <div class="table-chats" [ngClass]="self.methods.getChatClasses()">
         <button class="chat-toggle" (click)="self.methods.toggleChat()">
-          <fa-icon class="bt-caret-up" [icon]="['fas', 'caret-up']"></fa-icon>
-          <fa-icon class="bt-caret-down" [icon]="['fas', 'caret-down']"></fa-icon>
+          <i class="material-icons bt-caret-down">keyboard_arrow_down</i>
+          <i class="material-icons bt-caret-up">keyboard_arrow_up</i>
         </button>
         <div class="chat-output" id="chat-output">
           <div class="inner">
