fog of war for battlemaps using svg masks

--- a/src/app/pages/battlemaps/battlemaps.component.html
+++ b/src/app/pages/battlemaps/battlemaps.component.html
@@ -83,6 +83,7 @@
           <bt-battlemap-detail-status    [self]="self" [item]="item" [layer]="self.methods.getLayerForItem(item)" *ngSwitchCase="'status'"></bt-battlemap-detail-status>
           <bt-battlemap-detail-tile      [self]="self" [item]="item" [layer]="self.methods.getLayerForItem(item)" *ngSwitchCase="'tile'"></bt-battlemap-detail-tile>
           <bt-battlemap-detail-width     [self]="self" [item]="item" [layer]="self.methods.getLayerForItem(item)" *ngSwitchCase="'width'"></bt-battlemap-detail-width>
+          <bt-battlemap-detail-window    [self]="self" [item]="item" [layer]="self.methods.getLayerForItem(item)" *ngSwitchCase="'window'"></bt-battlemap-detail-window>
         </div>
 
         <div class="flex-row-all flex-gutters-5 tm-10">
