--- a/src/app/pages/rpg-sheets/overview/entities/calculation/calculation.component.html
+++ b/src/app/pages/rpg-sheets/overview/entities/calculation/calculation.component.html
@@ -1,4 +1,4 @@
-<div class="stat-number-row flex-gutters-5 bm-10">
+<div class="rpg-calculation stat-number-row flex-gutters-5">
   <div class="flex-col-4">
     <label class="block-label">{{ entity.name }}</label>
   </div>
