--- a/src/app/pages/rpg-sheets/overview/entities/condition/condition.component.html
+++ b/src/app/pages/rpg-sheets/overview/entities/condition/condition.component.html
@@ -1,4 +1,4 @@
-<div class="bm-10">
+<div class="rpg-condition">
   <label class="checkbox-inline">
     <input type="checkbox" title="Toggle {{ entity.name }}" (ngModelChange)="self.methods.toggleCondition(entity)" [(ngModel)]="entity.active">
     <span>{{ entity.name }}</span>
