--- a/src/app/pages/rpg-sheets/overview/entities/stat/stat.component.html
+++ b/src/app/pages/rpg-sheets/overview/entities/stat/stat.component.html
@@ -1,4 +1,4 @@
-<div class="stat-number-row flex-gutters-5 bm-10">
+<div class="rpg-stat stat-number-row flex-gutters-5">
   <div class="flex-col-4">
     <label class="control-label">{{ entity.name }}</label>
   </div>
