--- a/src/app/pages/rpg-sheets/overview/collectable-types/formula/formula.component.html
+++ b/src/app/pages/rpg-sheets/overview/collectable-types/formula/formula.component.html
@@ -1,2 +1,9 @@
-<div class="block-value">{{ self.methods.calculateCollectableFormula(field, item, collectable) }}</div>
-<button class="button button-orange" *ngIf="field.rolls">Roll</button>
+<div class="block-value" [class.invisible]="field.rolls">{{ self.methods.calculateCollectableFormula(field, item, collectable) }}</div>
+<div class="flex-row-all flex-gutters-5" *ngIf="field.rolls">
+  <div class="flex-col">
+    <button class="button button-orange" (click)="self.methods.rollFormula(field)">Roll</button>
+  </div>
+  <div class="flex-col">
+    <label class="block-label">{{ field.last_result }}</label>
+  </div>
+</div>
