--- a/src/app/pages/rpg-sheets/collectable-inputs/reference/reference.component.html
+++ b/src/app/pages/rpg-sheets/collectable-inputs/reference/reference.component.html
@@ -2,6 +2,6 @@
   <i class="material-icons">arrow_drop_down</i>
   <label>{{ self.methods.reverseLookupBy(self.methods.listEntitiesForConditionEffect(), {id: item[field.field_id]}, 'name') }}</label>
   <select class="form-control" (ngModelChange)="self.touch()" [(ngModel)]="item[field.field_id]">
-    <option [value]="option.id" *ngFor="let option of self.methods.listEntitiesForConditionEffect()">{{ option.name }}</option>
+    <option [value]="entity.id" *ngFor="let entity of self.methods.listEntitiesForConditionEffect()">{{ entity.name }}</option>
   </select>
 </div>
